lil css updates

--- a/style/style.scss
+++ b/style/style.scss
@@ -19,10 +19,12 @@ body {
     ul {
         list-style: none;
         display: inline;
+        padding: 0 25px 0 25px;
     }
 }
 
 .xmb {
     display: flex;
     justify-content: center;
+    padding-top: 15%;
 }
