--- a/style/style.css
+++ b/style/style.css
@@ -19,9 +19,11 @@ body img {
 body ul {
   list-style: none;
   display: inline;
+  padding: 0 25px 0 25px;
 }
 
 .xmb {
   display: flex;
   justify-content: center;
+  padding-top: 15%;
 }/*# sourceMappingURL=style.css.map */
