--- a/style/style.css
+++ b/style/style.css
@@ -1,15 +1,30 @@
+@font-face {
+  font-family: "Rodin";
+  src: url(../assets/fonts/Rodin/rodin.otf);
+}
 * {
   margin: 0;
   padding: 0;
+  font-family: "Arial";
+  font-size: 24px;
 }
 
 body {
-  color: red;
   height: 100vh;
   overflow: hidden;
+  color: whitesmoke;
+}
+body main {
+  position: relative;
+  margin-top: 14%;
+}
+body main li, body main h1, body main p {
+  opacity: 80%;
 }
 body img {
   position: fixed;
+  top: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -24,4 +39,59 @@ body ul {
 .xmb {
   display: flex;
   justify-content: center;
+}
+
+.xmb_col {
+  position: relative;
+  min-width: 200px;
+}
+
+.xmb_col_icons {
+  position: relative;
+  height: 80px;
+  width: 80px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.xmb_col_header {
+  display: flex;
+  width: -moz-fit-content;
+  width: fit-content;
+  flex-direction: column;
+  align-items: center;
+}
+
+.xmb_col_title {
+  font-size: 18px;
+}
+
+.xmb_row {
+  visibility: hidden;
+}
+
+.xmb_row_content {
+  display: flex;
+  align-items: center;
+  margin-left: 15px;
+}
+
+.xmb_row_icons {
+  position: relative;
+  height: 50px;
+  width: 50px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.xmb_row_text {
+  margin-left: 20px;
+}
+
+.xmb_row_info {
+  font-size: 14px;
+}
+
+.active {
+  visibility: visible;
 }/*# sourceMappingURL=style.css.map */
