--- a/style/style.css
+++ b/style/style.css
@@ -36,14 +36,15 @@ body ul {
   display: inline;
 }
 
-.xmb {
+#xmb {
   display: flex;
-  justify-content: center;
+  position: relative;
+  left: 23%;
 }
 
 .xmb_col {
   position: relative;
-  min-width: 200px;
+  margin-right: 10px;
 }
 
 .xmb_col_icons {
@@ -94,4 +95,33 @@ body ul {
 
 .active {
   visibility: visible;
+}
+
+#clock {
+  opacity: 0;
+  position: absolute;
+  top: 5%;
+  left: 80%;
+  bottom: 0;
+  right: 0;
+  width: 5%;
+  color: white;
+  text-align: right;
+  font-size: 18px;
+  z-index: 3;
+}
+#clock .clock-container {
+  width: 400%;
+  border: 1px solid #dadada;
+  border-right: none;
+  border-radius: 3px;
+  padding-right: 0px 40px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+#clock .clock-container p {
+  letter-spacing: 1px;
+  margin: revert;
+  margin-right: 20px;
+  text-shadow: 2px 2px 5px black;
+  font-size: 18px;
 }/*# sourceMappingURL=style.css.map */
