--- a/style/style.css
+++ b/style/style.css
@@ -54,6 +54,7 @@ body ul {
   width: 90px;
   -o-object-fit: contain;
      object-fit: contain;
+  margin-bottom: 15px;
 }
 
 .xmb_col_header {
@@ -62,6 +63,7 @@ body ul {
   width: fit-content;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 70px;
 }
 
 .xmb_col_title {
@@ -76,7 +78,8 @@ body ul {
 .xmb_row_content {
   display: flex;
   align-items: center;
-  margin-left: 15px;
+  margin: 0 0 40px 15px;
+  scale: 0.9;
 }
 
 .xmb_row_icons {
@@ -99,6 +102,11 @@ body ul {
 
 .active {
   visibility: visible;
+}
+
+.focus {
+  animation: glow 1s ease-in-out infinite alternate;
+  scale: 1;
 }
 
 #clock {
@@ -128,4 +136,13 @@ body ul {
   margin-right: 20px;
   text-shadow: 2px 2px 5px black;
   font-size: 18px;
+}
+
+@keyframes glow {
+  from {
+    text-shadow: 0 0 1px #d3d3d3, 0 0 2px #acacac, 0 0 2px #b1afaf, 0 0 5px #9b9b9b;
+  }
+  to {
+    text-shadow: 0 0 5px #dfdfdf, 0 0 8px #c9c9c9, 0 0 15px #b6b6b4, 0 0 20px #b9b9b9;
+  }
 }/*# sourceMappingURL=style.css.map */
