--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@ body main {
 body main li, body main h1, body main p {
   opacity: 80%;
 }
-body img {
+body #xmb_bg {
   position: fixed;
   top: 0;
   right: 0;
@@ -136,6 +136,16 @@ body ul {
   margin-right: 20px;
   text-shadow: 2px 2px 5px black;
   font-size: 18px;
+}
+
+#trophy {
+  display: flex;
+  align-items: center;
+}
+#trophy img {
+  height: 25px;
+  width: 25px;
+  padding: 5px;
 }
 
 @keyframes glow {
