--- a/style/style.css
+++ b/style/style.css
@@ -6,10 +6,10 @@
   margin: 0;
   padding: 0;
   font-family: "Arial";
-  font-size: 24px;
 }
 
 body {
+  font-size: 24px;
   height: 100vh;
   overflow: hidden;
   color: whitesmoke;
@@ -19,6 +19,8 @@ body {
 }
 body main {
   height: inherit;
+  opacity: 0;
+  transition: ease 500ms;
 }
 body main li, body main h1, body main p {
   opacity: 80%;
@@ -154,8 +156,59 @@ body ul {
   margin-left: 10px;
 }
 
-#header, #disclaimer {
+#header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 20%;
+  padding: 40px;
+  opacity: 0;
   position: relative;
+  z-index: 1;
+  transition: opacity 3s ease-in-out;
+}
+#header h1 {
+  margin: revert;
+  font-size: 50px;
+  font-weight: 500;
+  letter-spacing: -2px;
+  color: #dadada;
+  text-shadow: 2px 2px 5px black;
+}
+#header p {
+  font-size: 32px;
+  margin-top: -40px;
+  letter-spacing: -2px;
+  color: #dadada;
+  text-shadow: 2px 2px 5px black;
+}
+
+#disclaimer {
+  opacity: 0;
+  color: #dadada;
+  text-shadow: 2px 2px 5px black;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  transition: ease 1000ms;
+}
+#disclaimer #disclaimerHead {
+  margin-top: 25%;
+  margin-left: 20%;
+}
+#disclaimer p {
+  position: relative;
+  margin: revert;
+  top: 50%;
+  left: 50%;
+  transform: translate(-75%, -50%);
+  margin-top: -10px;
+  margin-left: 20%;
+  width: 65%;
+  text-transform: uppercase;
+  font-size: 1.1rem;
 }
 
 @keyframes glow {
