Allow multisound in same time + preparation of enter&esc eventlistener + adding icons

--- a/style/style.css
+++ b/style/style.css
@@ -175,6 +175,9 @@ body ul {
   color: #dadada;
   text-shadow: 2px 2px 5px black;
 }
+#header h1 img {
+  scale: 2;
+}
 #header p {
   font-size: 32px;
   margin-top: -40px;
