--- a/style/style.scss
+++ b/style/style.scss
@@ -185,6 +185,10 @@ body {
         letter-spacing: -2px;
         color: #dadada;
         text-shadow: 2px 2px 5px black;
+
+        img{
+            scale: 2;
+        }
     }
 
     p{
