--- a/style/style.css
+++ b/style/style.css
@@ -85,6 +85,7 @@ body ul {
   align-items: center;
   margin: 0 0 40px 15px;
   scale: 0.9;
+  position: absolute;
 }
 
 .xmb_row_icons {
@@ -212,6 +213,11 @@ body ul {
   width: 65%;
   text-transform: uppercase;
   font-size: 1.1rem;
+}
+
+.infowrapper {
+  position: absolute;
+  visibility: hidden;
 }
 
 @keyframes glow {
