--- a/style/style.scss
+++ b/style/style.scss
@@ -91,6 +91,8 @@ body {
     align-items: center;
     margin: 0 0 40px 15px;
     scale: 0.9;
+
+    position: absolute;
 }
 
 .xmb_row_icons {
@@ -226,6 +228,11 @@ body {
         text-transform: uppercase;
         font-size: 1.1rem;
     }
+}
+
+.infowrapper{
+    position: absolute;
+    visibility: hidden;
 }
 
 @keyframes glow {
