--- a/style/style.scss
+++ b/style/style.scss
@@ -84,6 +84,7 @@ body {
 
 .xmb_row{
     visibility: hidden;
+    position: relative;
 }
 
 .xmb_row_content{
@@ -91,8 +92,7 @@ body {
     align-items: center;
     margin: 0 0 40px 15px;
     scale: 0.9;
-
-    //position: absolute;
+    position: relative;
 }
 
 .xmb_row_icons {
