Adding transition + setup infowrapper + notify WIP

--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,13 @@
   font-family: "Arial";
 }
 
+#wip {
+  text-align: center;
+  font-size: 70px;
+  position: relative;
+  top: 300px;
+}
+
 body {
   font-size: 24px;
   height: 100vh;
@@ -45,6 +52,7 @@ body ul {
   position: relative;
   top: 27%;
   left: 29%;
+  transition: left 0.5s ease;
 }
 
 .xmb_col {
@@ -79,6 +87,8 @@ body ul {
 .xmb_row {
   visibility: hidden;
   position: relative;
+  transition: top 0.5s;
+  top: 0;
 }
 
 .xmb_row_content {
@@ -87,6 +97,8 @@ body ul {
   margin: 0 0 40px 15px;
   scale: 0.9;
   position: relative;
+  transition: top 0.5s;
+  top: 0;
 }
 
 .xmb_row_icons {
@@ -216,9 +228,21 @@ body ul {
   font-size: 1.1rem;
 }
 
-.infowrapper {
-  position: absolute;
+.about-bg .infowrapper {
   visibility: hidden;
+  position: absolute;
+  width: 350%;
+  height: auto;
+  top: 0;
+  left: 250px;
+  padding: 20px;
+  border: 1px solid;
+  border-radius: 15px;
+  z-index: -1;
+}
+.about-bg .infowrapper h1 {
+  border-bottom: 2px solid white;
+  padding: 10px 0 20px;
 }
 
 @keyframes glow {
