--- a/style/style.scss
+++ b/style/style.scss
@@ -180,6 +180,53 @@ body {
     }
 }
 
+#welcomer{
+    position: relative;
+    height: 100%;
+    width: 100%;
+    backdrop-filter: blur(10px);
+    text-align: center;
+
+    #welcomerText{
+        position: relative;
+        top: 30%;    
+    }
+
+    #welcomerBtn{
+        position: absolute;
+        top: 88%;
+        left: 25%;
+    }
+}
+
+#welcomer::before{
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    top: 15%;
+    left: 0;
+    animation: glow 1s ease-in-out infinite alternate;
+    box-shadow: 0 0 5px #dfdfdf, 0 0 8px #ffffff, 0 0 15px #b6b6b4, 0 0 20px #b9b9b9;
+}
+
+#welcomer::after{
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    bottom: 15%;
+    left: 0;
+    box-shadow: 0 0 5px #dfdfdf, 0 0 8px #ffffff, 0 0 15px #b6b6b4, 0 0 20px #b9b9b9;
+    
+}
+
+.okBtn{
+    animation: glow 1s ease-in-out infinite alternate;
+}
+
 #header{
     display: flex;
     flex-direction: column;
