--- a/style/style.scss
+++ b/style/style.scss
@@ -217,7 +217,6 @@ body {
     background-color: white;
     top: 15%;
     left: 0;
-    animation: glow 1s ease-in-out infinite alternate;
     box-shadow: 0 0 5px #dfdfdf, 0 0 8px #ffffff, 0 0 15px #b6b6b4, 0 0 20px #b9b9b9;
 }
 
@@ -298,25 +297,56 @@ body {
     }
 }
 
-.about-bg{
-
-    .infowrapper{
-        visibility: hidden;
-        position: absolute;
-        width: 350%;
-        height: auto;
-        top: 0;
-        left: 250px;
-        padding: 20px;
-        border: 1px solid;
-        border-radius: 15px;
-        z-index: -1;
-        
-        h1{
-            border-bottom: 2px solid white;
-            padding: 10px 0 20px;
-        }
+.infowrapper{
+    opacity: 0;
+    position: absolute;
+    width: 350%;
+    height: auto;
+    top: 0;
+    left: 250px;
+    padding: 20px;
+    border: 1px solid;
+    border-radius: 15px;
+    z-index: -1;
+    text-shadow: none;
+    background-color: dodgerblue;
+    
+    h1{
+        border-bottom: 2px solid white;
+        padding: 10px 0 20px;
     }
+
+}
+
+#settingswrapper{
+    visibility: visible;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 30%;
+    height: 100%;
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,0.2) 0%, rgba(0,0,0,0.01) 100%);
+    transition: opacity ease .1s;
+    
+    p{
+        position: relative;
+        text-align: center;
+        top: 40%;
+        color: red;
+        font-size: 40px;
+    }
+}
+
+#settingswrapper::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 4px;
+    background: black;
+    background: linear-gradient(to bottom, rgba(80,80,80,0.4) 0%, rgba(255,255,255,1) 50%, rgba(80,80,80,0.4) 100%);
+    filter: drop-shadow(6px 0px 10px #000);
 }
 
 @keyframes glow {
