--- a/style/style.css
+++ b/style/style.css
@@ -333,12 +333,10 @@ body ul {
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.01) 100%);
   transition: opacity ease 0.1s;
 }
-#settingswrapper p {
+#settingswrapper section {
   position: relative;
-  text-align: center;
   top: 40%;
-  color: red;
-  font-size: 40px;
+  margin: 10px 0 10px 25px;
 }
 
 #settingswrapper::before {
@@ -349,6 +347,15 @@ body ul {
   background: black;
   background: linear-gradient(to bottom, rgba(80, 80, 80, 0.4) 0%, rgb(255, 255, 255) 50%, rgba(80, 80, 80, 0.4) 100%);
   filter: drop-shadow(6px 0px 10px #000);
+}
+
+.colorwrapper {
+  display: flex;
+}
+.colorwrapper img {
+  height: 25px;
+  width: 25px;
+  margin-right: 15px;
 }
 
 @keyframes glow {
