--- a/style/style.scss
+++ b/style/style.scss
@@ -352,12 +352,10 @@ body {
     background: linear-gradient(90deg, rgba(255,255,255,0.2) 0%, rgba(0,0,0,0.01) 100%);
     transition: opacity ease .1s;
     
-    p{
+    section{
         position: relative;
-        text-align: center;
         top: 40%;
-        color: red;
-        font-size: 40px;
+        margin: 10px 0 10px 25px;
     }
 }
 
@@ -369,6 +367,16 @@ body {
     background: black;
     background: linear-gradient(to bottom, rgba(80,80,80,0.4) 0%, rgba(255,255,255,1) 50%, rgba(80,80,80,0.4) 100%);
     filter: drop-shadow(6px 0px 10px #000);
+}
+
+.colorwrapper{
+    display: flex;
+
+    img{
+        height: 25px;
+        width: 25px;
+        margin-right: 15px;
+    }
 }
 
 @keyframes glow {
