--- a/style/style.scss
+++ b/style/style.scss
@@ -123,10 +123,15 @@ body {
     font-size: 14px;
 }
 
-.details_icon{
+.details_icon, .details_main_icon{
     height: 30px;
     width: 30px;
     margin-right: 10px;
+}
+
+.xbox_key_icon{
+    position: absolute;
+    opacity: 0;
 }
 
 .active{
@@ -332,10 +337,19 @@ body {
     text-shadow: none;
     background-color: dodgerblue;
     transition: opacity .1s ease;
+    font-size: 18px;
+    white-space: normal;
+    line-height: 2em;
     
     h1{
         border-bottom: 2px solid white;
         padding: 10px 0 20px;
+    }
+
+    .d-pad, .a-btn, .b-btn{
+        position: relative;
+        top: 5px;
+        margin: 0;
     }
 
 }
@@ -352,7 +366,7 @@ body {
     background: linear-gradient(90deg, rgba(255,255,255,0.2) 0%, rgba(0,0,0,0.01) 100%);
     transition: opacity ease .1s;
     
-    section{
+    article{
         position: relative;
         top: 40%;
         margin: 10px 0 10px 25px;
