--- a/style/style.scss
+++ b/style/style.scss
@@ -383,7 +383,7 @@ body {
     filter: drop-shadow(6px 0px 10px #000);
 }
 
-.colorwrapper{
+.themewrapper{
     display: flex;
 
     img{
@@ -391,6 +391,11 @@ body {
         width: 25px;
         margin-right: 15px;
     }
+}
+
+#offbtn{
+    visibility: hidden;
+    position: absolute;
 }
 
 @keyframes glow {
