--- a/style/style.scss
+++ b/style/style.scss
@@ -367,7 +367,7 @@ body {
     transition: opacity ease .1s;
     
     article{
-        position: relative;
+        position: absolute;
         top: 40%;
         margin: 10px 0 10px 25px;
     }
@@ -393,7 +393,7 @@ body {
     }
 }
 
-#offbtn{
+#offbtn, #offbtnsound{
     visibility: hidden;
     position: absolute;
 }
